Bug 1561794 - Do not crop display text of themed comboboxes due to padding. r=dbaron a=RyanVM
This is a potential fix that I thought it was worth doing rather than
implementing Blink's platform-dependent silliness. This ensures that the display
frame always has enough space to display itself.

Note that it may still get clipped, if there's no room for both the display
frame and the button.

Differential Revision: https://phabricator.services.mozilla.com/D37922

--- a/layout/style/res/forms.css
+++ b/layout/style/res/forms.css
@@ -334,8 +334,10 @@ select > button[orientation="right"]:active {
   text-align: unset;
   user-select: none;
   /* Make sure to size correctly if the combobox has a non-auto block-size. */
-  block-size: 100% ! important;
-  box-sizing: border-box ! important;
+  block-size: 100%;
+  /* Try to always display our own text */
+  min-inline-size: max-content;
+  box-sizing: border-box;
   line-height: -moz-block-height;
 }
 
